first-season-done

--- a/landing/main.css
+++ b/landing/main.css
@@ -327,6 +327,7 @@ header .main-wrapper {
 }
 
 .first-season_section {
+  box-shadow: 0px 8px 2 7px 0px #000000 inset;
   background: url(./images/firstseasonbckg8.jpg) no-repeat;
   background-size: cover;
   position: relative;
@@ -335,7 +336,7 @@ header .main-wrapper {
 }
 .first-season_section::after {
   content: "";
-  position: absolute;
+
   z-index: -1;
   left: 0;
   right: 0;
@@ -345,31 +346,25 @@ header .main-wrapper {
 }
 
 .first-season_section .main-wrapper {
-  height: 100%;
   justify-content: space-between;
 }
 
 .first-season_section .main-wrapper > div {
   display: flex;
+  justify-content: center;
   width: 100%;
   align-items: center;
-  justify-content: space-between;
   padding-top: 50px;
 }
 .first-season_container {
   align-self: flex-start;
-  padding-bottom: 30px;
-  display: flex;
-  flex-direction: column;
-  margin-right: 50px;
-  width: 60%;
 }
 
 .first-season-img {
-  height: 40%;
-  width: 40%;
+  width: 260px;
+  height: 350px;
   filter: grayscale(60%);
-  opacity: 0.8;
+  opacity: 0.7;
 }
 
 .first-season_section .main-wrapper > h2 {
@@ -379,6 +374,7 @@ header .main-wrapper {
 .first-season_container > h3 {
   color: white;
   text-shadow: 0px 0px 12px #000000;
+  padding-right: 250px;
 }
 .first-season_container > p {
   line-height: 2;
@@ -398,8 +394,6 @@ header .main-wrapper {
 }
 
 .first-season_series-list {
-  display: flex;
-  justify-content: space-between;
   line-height: 2;
   letter-spacing: 1px;
   font-weight: bold;
@@ -409,7 +403,7 @@ header .main-wrapper {
   position: relative;
 }
 .first-season_series-list > ul > li {
-  list-style: none;
+  list-style: katakana-iroha inside;
   padding-top: 10px;
 }
 
@@ -427,4 +421,5 @@ header .main-wrapper {
   color: rgba(248, 135, 64, 0.843);
   background-color: rgba(255, 255, 255, 0.726);
   border-radius: 100px;
+  padding: 10px;
 }
